--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.xlsx
+*.png
 .vscode/
 .ipynb_checkpoints/
 .DS_Store
@@ -13,3 +15,4 @@ results/
 model_analysis/
 env/
 src/train_e5_contrastive.py
+interactive_outputs
